; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dcn10/extr_dcn10_link_encoder.c_setup_panel_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dcn10/extr_dcn10_link_encoder.c_setup_panel_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dcn10_link_encoder = type { i32 }

@DP_DPHY_INTERNAL_CTRL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dcn10_link_encoder*, i32)* @setup_panel_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_panel_mode(%struct.dcn10_link_encoder* %0, i32 %1) #0 {
  %3 = alloca %struct.dcn10_link_encoder*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.dcn10_link_encoder* %0, %struct.dcn10_link_encoder** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @DP_DPHY_INTERNAL_CTRL, align 4
  %7 = call i32 @REG(i32 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  br label %21

10:                                               ; preds = %2
  %11 = load i32, i32* @DP_DPHY_INTERNAL_CTRL, align 4
  %12 = call i32 @REG_READ(i32 %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %4, align 4
  switch i32 %13, label %16 [
    i32 129, label %14
    i32 128, label %15
  ]

14:                                               ; preds = %10
  store i32 1, i32* %5, align 4
  br label %17

15:                                               ; preds = %10
  store i32 17, i32* %5, align 4
  br label %17

16:                                               ; preds = %10
  store i32 0, i32* %5, align 4
  br label %17

17:                                               ; preds = %16, %15, %14
  %18 = load i32, i32* @DP_DPHY_INTERNAL_CTRL, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @REG_WRITE(i32 %18, i32 %19)
  br label %21

21:                                               ; preds = %17, %9
  ret void
}

declare dso_local i32 @REG(i32) #1

declare dso_local i32 @REG_READ(i32) #1

declare dso_local i32 @REG_WRITE(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
